2816. Про внесення змін до Податкового кодексу України у зв'язку з прийняттям Закону України "Про запобігання корупції"

--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_18.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_18.md
@@ -212,13 +212,19 @@ e) Базовим податковим (звітним) періодом з по
 
 342.2. При прийнятті на роботу посадовій особі може бути встановлено випробувальний термін відповідно до Закону України "Про державну службу".
 
-342.3. На роботу до контролюючих органів не можуть бути прийняті особи, стосовно яких встановлено обмеження законами України "Про державну службу" та "Про засади запобігання і протидії корупції".
+342.3. На роботу до контролюючих органів не можуть бути прийняті особи, стосовно яких Законом України “Про державну службу” встановлено обмеження.
+
+342.3-1. Стосовно осіб, які претендують на зайняття посад у контролюючих органах, за їх письмовою згодою проводиться спеціальна перевірка у випадках та порядку, встановлених Законом України “Про запобігання корупції”.
+
+342.3-2. Особи, які претендують на зайняття посад у контролюючих органах, до призначення на відповідні посади зобов’язані повідомити керівництву органів, на посади в яких вони претендують, про працюючих у таких органах близьких осіб.
 
 342.4. Посадові особи контролюючих органів є державними службовцями.
 
 342.5. Посадові особи, які вперше зараховуються на службу до контролюючих органів і раніше не перебували на державній службі, складають присягу державного службовця відповідно до Закону України "Про державну службу".
 
-342.6. Правовий статус посадових осіб контролюючих органів, їх права та обов’язки визначаються Конституцією України, цим Кодексом та Митним кодексом України, а в частині, що не регулюється ними, - Законом України "Про державну службу" та іншими законами.
+342.6. Правовий статус посадових осіб контролюючих органів, їх права та обов’язки визначаються Конституцією України, цим Кодексом та Митним кодексом України, а в частині, що не регулюється ними, - “Законами України “Про державну службу”, “Про запобігання корупції” та іншими законами.
+
+*Примітка.* Термін “близькі особи” вживається у значенні, наведеному в Законі України “Про запобігання корупції”.
 
 342.7. Посадовим особам і працівникам контролюючих органів видається службове посвідчення, зразок якого затверджує центральний орган виконавчої влади, що забезпечує формування та реалізує державну фінансову політику.
 
