--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_4.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_4.md
@@ -1492,7 +1492,7 @@
 
 179.10. Платник податку має право звернутися до відповідного контролюючого органу з проханням надати консультативну допомогу з питань щодо заповнення його річної податкової декларації, а контролюючий орган зобов’язаний надати безоплатні послуги за таким зверненням.
 
-179.11. Фізичні особи, які декларують майно, доходи, витрати і зобов'язання фінансового характеру відповідно до Закону України "Про засади запобігання і протидії корупції", подають податкову декларацію виключно у випадках, передбачених цим розділом.
+179.11. Фізичні особи, які подають декларацію особи, уповноваженої на виконання функцій держави або місцевого самоврядування, відповідно до Закону України “Про запобігання корупції”, подають податкову декларацію виключно у випадках, передбачених цим розділом.
 
 179.12. За зверненням платника податку контролюючий орган, до якого було подано податкову декларацію, видає довідку про подану декларацію про майновий стан і доходи (податкову декларацію) за формою, встановленою центральним органом виконавчої влади, що забезпечує формування та реалізує державну фінансову політику.
 
