2817. Про внесення змін до Митного кодексу України у зв'язку з прийняттям Закону України "Про запобігання корупції"

--- a/Кодекси/Митний_кодекс_України/Митний_кодекс_України_20.md
+++ b/Кодекси/Митний_кодекс_України/Митний_кодекс_України_20.md
@@ -227,13 +227,21 @@
 
 3. Правове становище посадових осіб органів доходів і зборів визначається цим Кодексом, а в частині, не врегульованій ним, - законодавством про державну службу та іншими актами законодавства України.
 
+4. На посадових осіб органів доходів і зборів поширюється дія Закону України “Про запобігання корупції”.
+
 **Стаття 570.** Особливості прийняття на службу до органів доходів і зборів
 
 1. На службу до органів доходів і зборів приймаються громадяни України, які досягли 18-річного віку і здатні за своїми діловими та моральними якостями, освітнім рівнем і станом здоров’я виконувати завдання, покладені на ці органи. З прийняттям на службу може бути встановлено випробування відповідно до Закону України "Про державну службу".
 
 2. Прийняття на службу до митних органів України здійснюється на конкурсній основі, якщо інше не передбачено законом. Порядок проведення конкурсу визначається Кабінетом Міністрів України. Прийняття та службу до органів доходів і зборів на посади, перебування на яких не пов’язане з проходженням державної служби, здійснюється в порядку, визначеному законодавством України про працю.
 
-3. На службу до органів доходів і зборів не можуть бути прийняті особи, визнані в установленому порядку недієздатними або обмеженими у дієздатності, особи, які мають судимість за вчинення умисного злочину, а також особи, які протягом року, що передував їх зверненню до органу доходів і зборів з приводу працевлаштування, притягувалися до адміністративної відповідальності за вчинення корупційних діянь та інших правопорушень, пов’язаних з корупцією.
+3. На службу до органів доходів і зборів не можуть бути прийняті особи, визнані в установленому порядку недієздатними або обмеженими у дієздатності, особи, які мають судимість за вчинення умисного злочину“(крім реабілітованих) або які протягом року до моменту їх звернення до органів доходів і зборів з приводу працевлаштування піддані адміністративному стягненню у виді позбавлення права обіймати посади або займатися діяльністю, що пов’язані з виконанням функцій держави або місцевого самоврядування, за вчинення адміністративного правопорушення.
+
+4. Стосовно осіб, які претендують на службу в органах доходів і зборів, за їх письмовою згодою проводиться спеціальна перевірка у випадках та в порядку, встановлених Законом України “Про запобігання корупції“.
+
+Особи, які претендують на службу в органах доходів і зборів, до призначення на відповідну посаду зобов’язані повідомити керівництву органу, на зайняття посади в якому вони претендують, про працюючих у цьому органі близьких осіб.
+
+*Примітка.* Термін “близькі особи” вживається у значенні, наведеному в Законі України “Про запобігання корупції”.
 
 **Стаття 572.** Обмеження, пов’язані з проходженням державної служби посадовими особами органів доходів і зборів
 
