--- a/Закони/Про_Центральну_виборчу_комісію.md
+++ b/Закони/Про_Центральну_виборчу_комісію.md
@@ -113,7 +113,7 @@
 
 1. Член Комісії перед вступом на посаду складає на пленарному засіданні Верховної Ради України присягу такого змісту:
 
-    >>"Я (прізвище, ім'я та по батькові), присягаю Українському народу при здійсненні своїх повноважень у Центральній виборчій комісії додержуватися Конституції України та законів України, позапартійної позиції, бути чесним, об'єктивним та неупередженим у вирішенні питань, що належать до повноважень Комісії, забезпечувати реалізацію і захист виборчих прав громадян України та права на участь у референдумі".
+    >"Я (прізвище, ім'я та по батькові), присягаю Українському народу при здійсненні своїх повноважень у Центральній виборчій комісії додержуватися Конституції України та законів України, позапартійної позиції, бути чесним, об'єктивним та неупередженим у вирішенні питань, що належать до повноважень Комісії, забезпечувати реалізацію і захист виборчих прав громадян України та права на участь у референдумі".
 
       Особа, яка склала присягу члена Комісії, ставить свій підпис під текстом присяги.
 
