--- a/Кодекси/Виборчий_кодекс_України/Виборчий_кодекс_України_1.md
+++ b/Кодекси/Виборчий_кодекс_України/Виборчий_кодекс_України_1.md
@@ -616,7 +616,7 @@
 
 1. Член виборчої комісії на першому засіданні виборчої комісії, в якому він бере участь, в обов’язковому порядку ознайомлюється зі змістом частин третьої − шостої цієї статті, після чого складає таку присягу члена комісії:
 
-    >> "Я, (прізвище, ім’я та по батькові), беручи на себе повноваження члена виборчої комісії та усвідомлюючи свою високу відповідальність перед Українським народом, присягаю додержуватися Конституції та законів України, чесно і сумлінно виконувати свої обов’язки, виходячи з принципів верховенства права, законності, об’єктивності та неупередженості, забезпечувати реалізацію і захист виборчих прав громадян України".
+    >"Я, (прізвище, ім’я та по батькові), беручи на себе повноваження члена виборчої комісії та усвідомлюючи свою високу відповідальність перед Українським народом, присягаю додержуватися Конституції та законів України, чесно і сумлінно виконувати свої обов’язки, виходячи з принципів верховенства права, законності, об’єктивності та неупередженості, забезпечувати реалізацію і захист виборчих прав громадян України".
 
     Особа, яка склала присягу, ставить свій підпис під текстом присяги. Цей документ є невід’ємною частиною документації відповідної виборчої комісії. Члену виборчої комісії після складення ним присяги видається посвідчення за підписом голови комісії вищого рівня за формою, затвердженою Центральною виборчою комісією.
 
